<resources>
    <string name="app_name">SmartHome</string>
    <!-- Strings related to login -->

    <!-- Labels -->
    <string name="app_title">SmartHome</string>
    <string name="app_subtitle">Haz login. Si aún no tienes cuenta, registrate</string>
    <!-- HOME -->
    <string name="select_city">Selecciona tu ciudad</string>
    <string name="your_home">Tu casa</string>

    <!-- Buttons -->
    <string name="login">Login</string>
    <string name="register">Registro</string>
    <string name="btn_city">Establecer</string>

    <!-- Fields -->
    <string name="email_field">Email</string>
    <string name="password_field">Contraseña</string>
    <string name="title_activity_maps">Map</string>
    <string name="temperature_history">Historial</string>


    <!-- Fragment -->
    <string name="temperature_field">Temperatura (ºC):</string>
    <string name="humidity_field">Humedad (%):</string>
    <string name="pressure_field">Presión (Pa):</string>
    <string name="city_field">Ciudad:</string>
    <string name="sky_field">Cielo:</string>
    <string name="date_field">Fecha:</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>

    <!-- Nav -->
    <string name="title_home">Inicio</string>
    <string name="title_dashboard">Historial</string>
    <string name="title_notifications">Dispositivos</string>


    <string name="speaker">Altavoz</string>
    <string name="beep">Pitido</string>
    <string name="melody">Melodía</string>

    <string name="lights">Luces</string>
    <string name="lights_on">On</string>
    <string name="lights_off">Off</string>
    <string name="lights_rainbow">Arcoiris</string>
    <string name="lights_change_color">Cambiar Color</string>
    <string name="lights_gradient">Gradiente</string>

    <string name="confirm">Guardar</string>
    <string name="rest_simulator">Abrir Estado Rest (simulación)</string>
    <string name="auto_mode">Modo Auto (basado en el tiempo)</string>
    <string name="map_advice">Información obtenida de openweatherapp cada 10 minutos</string>


    <string name="temperature_button">Temp.</string>
    <string name="humidity_button">Humedad</string>
    <string name="pressure_button">Presión</string>
</resources>
