<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".DevicesActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lightsView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="0"
            android:text="@string/lights"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnOn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lights_on" />

            <Button
                android:id="@+id/btnOff"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lights_off" />

            <Button
                android:id="@+id/btnRainbow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lights_rainbow" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/editRedColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:hint="Red"
                android:inputType="numberSigned" />

            <EditText
                android:id="@+id/editGreenColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:hint="Green"
                android:inputType="numberSigned" />

            <EditText
                android:id="@+id/editBlueColor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:hint="Blue"
                android:inputType="numberSigned" />

            <Button
                android:id="@+id/btnSetColor"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/lights_change_color" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/editNRepetition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:hint="Repeticiones"
                android:inputType="numberSigned" />

            <EditText
                android:id="@+id/editDelay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:hint="Delay"
                android:inputType="numberSigned" />

            <Button
                android:id="@+id/btnFade"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/lights_gradient" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/speakersView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="15dp"
            android:layout_weight="0"
            android:text="@string/speaker"
            android:textSize="30sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">


            <EditText
                android:id="@+id/editMelody"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:ems="10"
                android:hint="Melodía"
                android:inputType="numberSigned" />

            <Button
                android:id="@+id/btnMelody"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/melody" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnBeep"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/beep" />

        </LinearLayout>

        <Button
            android:id="@+id/btnAutoMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/auto_mode" />

        <Button
            android:id="@+id/btnOpenSimulationLink"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/rest_simulator" />

    </LinearLayout>

</LinearLayout>