<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".HistoryWeatherActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="7"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnPlotTemperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/temperature_button" />

        <Button
            android:id="@+id/btnPlotHumidity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/humidity_button" />

        <Button
            android:id="@+id/btnPlotPressure"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pressure_button" />
    </LinearLayout>

    <com.jjoe64.graphview.GraphView
        android:id="@+id/graph"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_weight="5" />

    <fragment
        android:id="@+id/fragment"
        android:name="com.example.smarthomeretrofit.HistoryWeatherFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="3" />


</LinearLayout>