<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="0"
    android:orientation="vertical"
    tools:context=".HomeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:layout_weight="0"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/editCity"
            android:layout_width="237dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:ems="10"
            android:hint="@string/select_city"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/btnSelectCity"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_city" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="262dp"
        android:layout_marginTop="15dp"
        android:layout_weight="10"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="237dp"
            android:layout_height="330dp"
            android:layout_marginLeft="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/temperatureLabel"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:text="Temperatura"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/weatherLabel"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:text="Clima"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/pressureLabel"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:text="Presión"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/humidityLabel"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:text="Humedad"
                android:textSize="18sp" />
        </LinearLayout>

        <WebView
            android:id="@+id/webView"
            android:layout_width="match_parent"
            android:layout_height="96dp"
            android:layout_weight="1" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_weight="0"
        android:text="Información obtenida de openweatherapp" />

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="215dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnHistory"
            android:layout_width="214dp"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/title_dashboard" />

        <Button
            android:id="@+id/btnDevices"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0"
            android:text="@string/title_notifications" />
    </LinearLayout>

</LinearLayout>